--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/masked-view": "^0.1.10",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.5.6",
+    "react-native-paper": "^3.9.0",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.3.9",
+    "react-navigation-material-bottom-tabs": "^2.2.12",
+    "react-navigation-stack": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
