--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-camera": "^3.26.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.6",
@@ -25,7 +26,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
     "react-navigation-material-bottom-tabs": "^2.2.12",
-    "react-navigation-stack": "^2.4.0"
+    "react-navigation-stack": "^2.4.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
