--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "jetifier": "^1.6.6",
+    "moment": "^2.27.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
-    "react-native-camera": "^3.26.0",
+    "react-native-camera": "^3.30.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.6",
@@ -27,6 +29,7 @@
     "react-navigation": "^4.3.9",
     "react-navigation-material-bottom-tabs": "^2.2.12",
     "react-navigation-stack": "^2.4.0",
+    "react-redux": "^7.2.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
